fix: resolved not centered layour on log-in & sign-in pages

--- a/log-in/log-in.css
+++ b/log-in/log-in.css
@@ -36,7 +36,6 @@ body {
 }
 
 .log-in_title h1 {
-    margin-top: 6vh;
     font-weight: 500;
     font-size: 32px;
     color: #183153;
@@ -68,6 +67,7 @@ body {
 }
 
 .log-in .column-60 {
+    position: relative;
     display: flex;
     width: 60%;
     height: 100%;
@@ -124,6 +124,17 @@ body {
     font-weight: 600;
     background-color: #FFD43B;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+.log-in .column-60_absolute {
+    width: 100%;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+    align-items: center;
 }
 
 .log-in .column-60 button:hover {
