--- a/sing-up/sing-up.css
+++ b/sing-up/sing-up.css
@@ -20,7 +20,6 @@
 }
 
 .sign-up_title h1 {
-    margin-top: 4vh;
     font-weight: 500;
     font-size: 32px;
     color: #183153;
